# portfolio

./: .gitignore  README.md
.github/workflows/: run-tests.yml
demos/: README.md  run_demo.sh
demos/c/: README.md
demos/c/dynamic_allocation/src/: main.c
demos/c/dynamic_array/: CMakeLists.txt
demos/c/static_allocation/: CMakeLists.txt
demos/dynamic_allocation/: CMakeLists.txt
demos/dynamic_allocation/src/: main.c
demos/dynamic_array/src/: main.c
demos/static_allocation/src/: main.c
demos/struct_size/: CMakeLists.txt
demos/struct_size/src/: main.c
hashmap/: CMakeLists.txt
hashmap/include/: bucket.h  hashmap.h
hashmap/src/: bucket.c  hashmap.c  main.c
hashmap/test/src/: test_bucket.cc  test_hashmap.cc
tooling/: .pylintrc  new_project.sh  test.sh
tooling/templates/: cmakelists_main.txt  cmakelists_test.txt
tooling/test/: test_new_project.py
